--- a/style.css
+++ b/style.css
@@ -31,3 +31,11 @@ h1, h2, h3 {
 footer {
     background-color: rgb(163, 66, 201);
 }
+
+.shadowbox {
+    width: 15em;
+    border 1px solid #333;
+    box-shadow: 8px 8px 6px #444;
+    padding: 8px 12px;
+    backgound-image: linear-gradient(180deg, #fff, #ddd, 40%, #ccc);
+}
