--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
  border 1px solid #333;
  box-shadow: 8px 8px 6px #444;
  padding: 8px 12px;
- backgound-image: linear-gradient(180deg, #fff, #ddd, 40%, #ccc);
+ background-image: linear-gradient(180deg, #fff, #ddd, 40%, #ccc);
 }
     
 header h2 {
@@ -41,9 +41,9 @@ footer {
     background-color: rgb(163, 66, 201);
 }
 
-{
+a {
     a:link {color: blue}
     a:visited {color: purple}
     a:hover {color: pink}
     a:active {color: yellow}
-    }
+}
