--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 
 .shadowbox {
  width: 15em;
- border 1px solid #333;
+ border: 1px solid #333;
  box-shadow: 8px 8px 6px #444;
  padding: 8px 12px;
  background-image: linear-gradient(180deg, #fff, #ddd, 40%, #ccc);
@@ -37,13 +37,12 @@ h1, h2, h3 {
     text-align: justify;
     
 }
+
 footer {
     background-color: rgb(163, 66, 201);
 }
-
-a {
-    a:link {color: blue}
-    a:visited {color: purple}
-    a:hover {color: pink}
-    a:active {color: yellow}
+{
+    a:visited { color: purple;}
+    a:hover {color: pink;}
+    a:active {color: yellow;}
 }
