--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ footer {
     background-color: rgb(163, 66, 201);
 }
 a {
-    a:visited { color: purple;}
+    a:link {color:blue;_
+    a:visited { color: red;}
     a:hover {color: pink;}
     a:active {color: yellow;}
 }
