--- a/style.css
+++ b/style.css
@@ -35,15 +35,14 @@ h1, h2, h3 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     text-align: justify;
-    
 }
+
+a:link {color:blue;}
+a:visited {color: red;}
+a:hover {color: pink;}
+a:active {color: yellow;}
 
 footer {
     background-color: rgb(163, 66, 201);
 }
-a {
-    a:link {color:blue;_
-    a:visited { color: red;}
-    a:hover {color: pink;}
-    a:active {color: yellow;}
-}
+
