--- a/style.css
+++ b/style.css
@@ -36,7 +36,13 @@ h1, h2, h3 {
     text-align: center;
     text-align: justify;
 }
-
+article {
+    img {
+        display: block:
+            margin-left: auto;
+        margin-right:auto;
+        width:50%;
+    }
 a:link {color:blue;}
 a:visited {color: red;}
 a:hover {color: pink;}
